k8s.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: gcr.io/akiho-playground/api:${VER}
          command: ["./main"]
          volumeMounts:
            - name: gcp-credentials
              mountPath: /var/secrets/gcp
              readOnly: true
            - name: api-env
              mountPath: /var/secrets
              readOnly: true
          ports:
            - containerPort: 80
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health_check
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 50m
        - name: grpcui-container
          image: gcr.io/akiho-playground/grpcui:latest
          command: ["./start.sh"]
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 50m
      volumes:
        - name: gcp-credentials
          secret:
            secretName: gcp-credentials
        - name: api-env
          secret:
            secretName: api-env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-container
          image: gcr.io/akiho-playground/web:${VER}
          command:
            - nginx
            - -g
            - "daemon off;"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /status
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 50m

---
apiVersion: v1
kind: Service
metadata:
  name: api-node-port
spec:
  type: NodePort
  ports:
    - name: "api-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
    - name: "debug-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: api

---
apiVersion: v1
kind: Service
metadata:
  name: web-node-port
spec:
  type: NodePort
  ports:
    - name: "web-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: web

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api-ip
spec:
  backend:
    serviceName: api-node-port
    servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-debug-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api-debug-ip
spec:
  backend:
    serviceName: api-node-port
    servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-ip
spec:
  backend:
    serviceName: web-node-port
    servicePort: 80
